# vilebot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: embeds.rs  mod.rs  owner.rs  protondb.rs  protonge.rs
