[package]
name = "vilebot"
version = "0.1.0"
authors = ["drvilepis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies.serenity]
version = "0.10.8"
default-features = false
features = ["cache", "client", "gateway","standard_framework", "rustls_backend", "model","framework"]

[dependencies.tokio]
version = "1.8.1"
features = ["macros", "rt-multi-thread","signal"]

[dependencies.reqwest]
version = "0.11.4"
default-features = false
features = []

[dependencies]
chrono = "0.4.19"
regex = {version = "1.5.4", features = ["default"]}
dotenv = "0.15.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"