[package]
name = "vilebot"
version = "0.1.0"
authors = ["drvilepis"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies.serenity]
version = "*"
default-features = false
features = ["cache", "client", "gateway","standard_framework", "rustls_backend", "model","framework"]

[dependencies.tokio]
version = "*"
features = ["macros", "rt-multi-thread","signal"]

[dependencies.reqwest]
version = "*"
default-features = false
features = ["blocking"]

[dependencies]
regex = {version = "*", features = ["default"]}
dotenv = "*"
tracing = "*"
tracing-subscriber = "*"
futures = "*"